# pybenchmark

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: data_validation.ipynb  setup.ipynb  test.ipynb  update.ipynb  weights.ipynb
pybenchmark/: auth.py  client.py  exercises.py  musclegroups.py  permissions.py  roles.py  sets.py  users.py  weights.py  workout_exercises.py  workout_routines.py  workouts.py
resources/: setup.xlsx
