[tool.poetry]
name = "pybenchmark"
version = "0.1.0"
description = ""
authors = ["Jordan Begg <jordansbegg@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
